Issue 37888: **Sample Management: fix Text alignment on Edit Fields page - plus a few other minor styling fixes

--- a/packages/querygrid/src/theme/detail.scss
+++ b/packages/querygrid/src/theme/detail.scss
@@ -141,7 +141,7 @@
 }
 
 .detail__header--container {
-  padding-left: 0;
+  padding-left: 0 !important;
 }
 
 .detail__header-icon {
